Day 3 and day 4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "iosfwd": "cpp",
         "sstream": "cpp",
         "regex": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "*.tcc": "cpp",
+        "vector": "cpp",
+        "ostream": "cpp"
     }
 }
